--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,8 +143,20 @@ jobs:
         with:
           identity: ${{ secrets.CHAINGUARD_IDENTITY }}
       
-      - name: Build FIPS Docker image for scanning
-        run: make build-image-fips-amd64-with-tags
+      - name: Login to Docker Hub
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          username: matterbuild
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push FIPS Docker image for scanning
+        run: |
+          # Build the FIPS image locally
+          make build-image-fips-amd64-with-tags
+          
+          # Tag and push to registry for sharing between jobs
+          docker tag mattermost/mattermost-push-proxy-fips:dev-${{ github.sha }}-fips-amd64 mattermost/mattermost-push-proxy-fips:dev-${{ github.sha }}-fips-amd64
+          docker push mattermost/mattermost-push-proxy-fips:dev-${{ github.sha }}-fips-amd64
       
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@dc5a429b52fcf669ce959baa2c2dd26090d2a6c4 # 0.32.0
@@ -163,8 +175,20 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Build Docker image for scanning
-        run: make build-image-amd64-with-tags
+      - name: Login to Docker Hub
+        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+        with:
+          username: matterbuild
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push Docker image for scanning
+        run: |
+          # Build the image locally
+          make build-image-amd64-with-tags
+          
+          # Tag and push to registry for sharing between jobs
+          docker tag mattermost-push-proxy:dev-${{ github.sha }}-amd64 mattermost/mattermost-push-proxy:dev-${{ github.sha }}-amd64
+          docker push mattermost/mattermost-push-proxy:dev-${{ github.sha }}-amd64
       
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@dc5a429b52fcf669ce959baa2c2dd26090d2a6c4 # 0.32.0
