--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,7 +199,7 @@ jobs:
   pr-deploy-amd64:
     name: PR Deploy AMD64
     runs-on: ubuntu-latest
-    needs: [security-scan]
+    needs: [security-scan, build-amd64]
     if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
@@ -232,7 +232,7 @@ jobs:
   pr-deploy-arm64:
     name: PR Deploy ARM64  
     runs-on: ubuntu-24.04-arm
-    needs: [security-scan]
+    needs: [security-scan, build-arm64]
     if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
@@ -295,7 +295,7 @@ jobs:
   pr-deploy-fips-amd64:
     name: PR Deploy FIPS AMD64
     runs-on: ubuntu-latest
-    needs: [fips-security-scan] 
+    needs: [fips-security-scan, fips-build-amd64] 
     if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
@@ -333,7 +333,7 @@ jobs:
   pr-deploy-fips-arm64:
     name: PR Deploy FIPS ARM64
     runs-on: ubuntu-24.04-arm
-    needs: [fips-security-scan]
+    needs: [fips-security-scan, fips-build-arm64]
     if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
@@ -403,7 +403,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [security-scan]
+    needs: [security-scan, build-amd64, build-arm64]
     if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
@@ -457,7 +457,7 @@ jobs:
   fips-deploy:
     name: FIPS Deploy
     runs-on: ubuntu-latest
-    needs: [fips-security-scan]
+    needs: [fips-security-scan, fips-build-amd64, fips-build-arm64]
     if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
