--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,7 @@ jobs:
     name: PR Deploy AMD64
     runs-on: ubuntu-latest
     needs: [security-scan, build-amd64]
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -233,7 +233,7 @@ jobs:
     name: PR Deploy ARM64  
     runs-on: ubuntu-24.04-arm
     needs: [security-scan, build-arm64]
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -266,7 +266,7 @@ jobs:
     name: PR Deploy Manifest
     runs-on: ubuntu-latest
     needs: [pr-deploy-amd64, pr-deploy-arm64]
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -296,7 +296,7 @@ jobs:
     name: PR Deploy FIPS AMD64
     runs-on: ubuntu-latest
     needs: [fips-security-scan, fips-build-amd64] 
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -334,7 +334,7 @@ jobs:
     name: PR Deploy FIPS ARM64
     runs-on: ubuntu-24.04-arm
     needs: [fips-security-scan, fips-build-arm64]
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -372,7 +372,7 @@ jobs:
     name: PR Deploy FIPS Manifest
     runs-on: ubuntu-latest
     needs: [pr-deploy-fips-amd64, pr-deploy-fips-arm64]
-    if: github.event_name == 'pull_request' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/master' && github.repository_owner == 'mattermost' && github.actor != 'dependabot[bot]'
     permissions:
       contents: read
       id-token: write
@@ -404,7 +404,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [security-scan, build-amd64, build-arm64]
-    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'push' && github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
       id-token: write
@@ -458,7 +458,7 @@ jobs:
     name: FIPS Deploy
     runs-on: ubuntu-latest
     needs: [fips-security-scan, fips-build-amd64, fips-build-arm64]
-    if: github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
+    if: github.event_name == 'push' && github.repository_owner == 'mattermost' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) && github.actor != 'dependabot[bot]'
     permissions:
       contents: write
       id-token: write
